[볼링 점수판 - OOP] 4단계 - 볼링 점수판(n명) (#776)
* refactor: "prevScore" 축약 변수명을 객체 생활체조 원칙에 맞게 풀네임 변수명으로 변경

* refactor(Frames.java): OCP를 구현하기 위해 내부 필드 List 타입 사용

* test(ScoreTest.java): 최종점수 반환시 예외 케이스와 정상 케이스 분리

* refactor(BasicFrame.java): nextFrame 반환과 next 대입 공통 로직 분리

* docs(README.md): 4단계 - 볼링 점수판(n명) 요구 사항 정리

* feat(InputView.java): 다중 `Player` 정보 입력 기능 구현

* feat(Players): 리스트 `Player`를 관리하기 위한 일급 컬렉션 `Players` 구현

* feat: 리스트 `BowlingGame`을 관리하기 위한 일급 컬렉션 `BowlingGames` 구현

* feat: `BowlingGames`를 생성하기 위한 입출력 기능 구현

* feat: `Frames`에서 최근 진행하는 `Frame`이 투구가 진행중인지 확인하는 기능 구현

* refactor: 다중 사용자 볼링 게임을 진행 로직 구현

* feat(BowlingGame): `BowlingGame` 진행 중에 최근 `Frame` 투구가 진행중인지 확인하는 기능 구현

* test(LastFrameTest.java): `LastFrame`에서 추가 점수 계산과 관련된 케이스 추가

* feat(BowlingGames.java): `FrameIndex`를 추가한 볼링 게임 인덱스 기능 추가